# yew-style-in-rs

./: CHANGELOG.md  LICENSE-Apache2  LICENSE-MIT  README.md
example/: Cargo.toml
example/my-app/: Cargo.toml  Trunk.toml  build.rs  index.html
example/my-app/src/: lib.rs
example/my-component-a/: Cargo.toml
example/my-component-a/src/: lib.rs
example/my-component-b/: Cargo.toml
example/my-component-b/src/: lib.rs
example/my-component-c/: Cargo.toml
example/my-component-c/src/: lib.rs
example/my-component-d/: Cargo.toml
example/my-component-d/src/: lib.rs
example/post-build/: Cargo.toml
example/post-build/src/: main.rs
